--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     username: "root"
     password: "Mysqladmin0x01"
-    url: jdbc:mysql://127.0.0.1:3306/new_schema?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/mydb?useSSL=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 server:
